# ava

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.braid/: config.toml
src/: approver.rs  config.rs  error.rs  main.rs  message.rs  telegram.rs
src/agent/: mod.rs
src/channel/: cli.rs  mod.rs  telegram.rs
src/db/: migrations.rs  mod.rs
src/provider/: anthropic.rs  mod.rs
src/tool/: mod.rs
